# TemplateBridgePatterns

./: .clang-format  AverageTrader.h  Binance.h  CMakeLists.txt  Coinbase.h  Exchange.h  MinMaxTrader.h  TradingBot.cpp  TradingBot.h  main.cpp  readme.md
